--- a/templates/layout.html
+++ b/templates/layout.html
@@ -44,6 +44,8 @@
                     <ul class="navbar-nav mr-auto mt-2">
                         <li class="nav-item"><a class="nav-link" href="/markets" style="color:white;">Markets</a></li>
                         <li class="nav-item"><a class="nav-link" href="/stock" style="color:white;">Lookup</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/earningscalendar" style="color:white;">Earnings</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/comps" style="color:white;">Comps</a></li>
                         <li class="nav-item"><a class="nav-link" href="/watchlist" style="color:white;">Watchlist</a></li>
                         <li class="nav-item"><a class="nav-link" href="/tradelog" style="color:white;">Log</a></li>
                         <li class="nav-item"><a class="nav-link" href="/documentation" style="color:white;">Documentation</a></li>
