added ec, comps

--- a/templates/comps_search.html
+++ b/templates/comps_search.html
@@ -42,9 +42,11 @@ function showPage() {
 <div id = "indexDiv" class ="animate-bottom" style = "display:none;">
 <br>
 
-<h class = "topblock">Comps</h>
+<h style = "margin-top: 30px; font-size: 50px; border: none; font-weight: bold; color: white;">Comps</h>
 
+<div class = "stockheader">
       <h1>Search for a stock's comps</h1>
+</div>
     <form action="/comps" method="post">
         <div class="form-group">
             <input name = "comp_ticker" placeholder = "Ticker" type = "text">
