--- a/static/styles.css
+++ b/static/styles.css
@@ -166,6 +166,7 @@ table
 {
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 0px;
     border-collapse:separate;
     border-spacing: 5px;
     border: 8px solid #509cab;
