added ec, comps

--- a/templates/comps.html
+++ b/templates/comps.html
@@ -59,7 +59,7 @@ function showPage() {
     <button type = "submit" class = "stock-input-button">Download as <img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/Microsoft_Excel_2013_logo.svg/611px-Microsoft_Excel_2013_logo.svg.png" style = "height: 25px; widhth: 25px;"> </button>
 </form>
 
-<table class = "compstableclass" class = "watchlisttable" style = "margin-top: 20px;">
+<table class = "compstableclass" class = "watchlisttable" style = "margin-top: 20px; width: 100%;">
     <thead>
         <tr>
             <th></th>
