--- a/templates/comps.html
+++ b/templates/comps.html
@@ -120,8 +120,8 @@ function showPage() {
                 {{comp.netmargin|round(1, 'common')}}%
                 {% else %}
                 {% endif %}</td>
-            <td>{% if comp.roeTTM is not none %}
-                {{comp.roeTTM|round(1, 'common')}}%
+            <td>{% if comp.roettm is not none %}
+                {{comp.roettm|round(1, 'common')}}%
                 {% else %}
                 {% endif %}</td>
             <td>{% if comp.roi is not none %}
