--- a/templates/index.html
+++ b/templates/index.html
@@ -124,7 +124,7 @@ Positions
                 <td class = "pct_change">{{row.pctchange}}</td>
                 <td>{{row.quantity}}</td>
                 <td>{{row.price}}</td>
-                <td>{{row.CostBasis}}</td>
+                <td>{{row.costbasis}}</td>
                 <td>{{row.total_usd}}</td>
                 <td>{{row.return}}</td>
                 <td>{{row.totalreturn_usd}}</td>
