--- a/templates/earnings.html
+++ b/templates/earnings.html
@@ -54,12 +54,12 @@ Positions
         <td>{{prev.date}}</td>
         <td>{{prev.hour}}</td>
         <td>Q{{prev.quarter}} {{prev.year}}</td>
-        <td>{{prev.epsEstimate}}</td>
-        <td>{{prev.epsActual}}</td>
-        <td>{{prev.epsBeat}}</td>
-        <td>{{prev.revenueEstimate}}</td>
-        <td>{{prev.revenueActual}}</td>
-        <td>{{prev.revenueBeat}}</td>
+        <td>{{prev.epsestimate}}</td>
+        <td>{{prev.epsactual}}</td>
+        <td>{{prev.epsbeat}}</td>
+        <td>{{prev.revenueestimate}}</td>
+        <td>{{prev.revenueactual}}</td>
+        <td>{{prev.revenuebeat}}</td>
       </tr>
       {% endfor %}
       </table>
@@ -91,8 +91,8 @@ Positions
           <td>{{fut.date}}</td>
           <td>{{fut.hour}}</td>
           <td>Q{{fut.quarter}} {{fut.year}}</td>
-          <td>{{fut.epsEstimate}}</td>
-          <td>{{fut.revenueEstimate}}</td>
+          <td>{{fut.epsestimate}}</td>
+          <td>{{fut.revenueestimate}}</td>
         </tr>
         {% endfor %}
       </table>
