--- a/templates/stock.html
+++ b/templates/stock.html
@@ -193,7 +193,7 @@ function showPage() {
         {% endif %}
         <!--Price target -->
 
-        {% if target_price is not none %}
+        <!--{% if target_price is not none %}-->
         <!--<div class="card card-info">-->
         <!--    <h3 class="card-title">Analyst Price Targets</h3>-->
         <!--    <div class="row">-->
@@ -227,8 +227,8 @@ function showPage() {
         <!--        </div>-->
         <!--    </div>-->
         <!--</div>-->
-        {% else %}
-        {% endif %}
+        <!--{% else %}-->
+        <!--{% endif %}-->
 
 
 
