--- a/templates/layout.html
+++ b/templates/layout.html
@@ -48,6 +48,7 @@
                         <li class="nav-item"><a class="nav-link" href="/comps" style="color:white;">Comps</a></li>
                         <li class="nav-item"><a class="nav-link" href="/watchlist" style="color:white;">Watchlist</a></li>
                         <li class="nav-item"><a class="nav-link" href="/tradelog" style="color:white;">Log</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/performance" style="color:white;">Performance</a></li>
                         <li class="nav-item"><a class="nav-link" href="/documentation" style="color:white;">Documentation</a></li>
                     </ul>
 
