no target price

--- a/templates/performance.html
+++ b/templates/performance.html
@@ -19,10 +19,13 @@ function showPage() {
 }
 </script>
 
+<body onload = "myFunction()" style = "width: 100%;">
+  <div id = "loader"></div>
+<div id = "indexDiv" class ="animate-bottom" style = "display:none;">
+
 <table class = "tableclass" style = "margin-top: 50px;">
     <thead>
         <tr>
-            <th></th>
             <th>Date</th>
             <th>Portfolio Value</th>
         </tr>
